--- a/PensionManagement/src/main/resources/application.properties
+++ b/PensionManagement/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.application.name = ProcessPensionMicroservice
+spring.datasource.url = jdbc:h2:mem:ProcessPensionMicroserviceDB
+spring.datasource.driverClassName = org.h2.Driver
+spring.datasource.username = sa
+spring.datasource.password = sapassword
+spring.jpa.hibernate.ddl-auto = create
+logging.level.org.hibernate.sql = trace
+spring.jpa.show-sql = true
